--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,11 +36,12 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="put-your-gogle-api-key-here" />
+            android:value="AIzaSyD-mggb9gJ853WM-uIUx59fJ98TO4yZkvk" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <activity android:name=".PlacesListActicity"/>
     </application>
 
 </manifest>
