--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,17 +17,29 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
+    compile group: 'com.google.http-client', name: 'google-http-client-jackson2', version: '1.22.0'
+    compile group: 'com.google.api-client', name: 'google-api-client', version: '1.22.0'
+
+    //compile group: 'com.google.api-client', name: 'google-api-client-android', version: '1.22.0'
+    //compile group: 'com.google.http-client', name: 'google-http-client-android', version: '1.22.0'
+    compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.22.0'
+
+
     compile 'com.google.android.gms:play-services:6.5.87'
-    compile "com.android.support:support-v4:25.0.1"
-    compile "com.android.support:support-v13:25.0.1"
+    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:support-v13:25.0.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
