--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
     //compile group: 'com.google.api-client', name: 'google-api-client-android', version: '1.22.0'
     //compile group: 'com.google.http-client', name: 'google-http-client-android', version: '1.22.0'
-    compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.22.0'
+    //compile group: 'com.google.oauth-client', name: 'google-oauth-client', version: '1.22.0'
 
 
     compile 'com.google.android.gms:play-services:6.5.87'
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.android.support:support-v13:25.0.1'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:design:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
     compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
